minor renaming changes

--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -45,8 +45,8 @@ INITIAL_DTG_MASS_RATIO =  1.000E-02 ! dust-to-gas ratio by mass
 STICKING_COEFF_NEUTRAL =  1.000E+00 ! sticking coeff for neutral species
 STICKING_COEFF_POSITIVE =  0.000E+00 ! sticking coeff for positive species
 STICKING_COEFF_NEGATIVE =  0.000E+00 ! sticking coeff for negative species
-RHOD =  3.000E+00 ! mass density of grain material
-RD =  1.000E-05 ! grain radius (cm)
+GRAIN_DENSITY =  3.000E+00 ! mass density of grain material
+grain_radius =  1.000E-05 ! grain radius (cm)
 ACM =  1.000E-08 ! site spacing (cm)
 SNS =  1.500E+15 ! site density (cm-2)
 EBFAC =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
