minor renaming changes

--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -62,8 +62,8 @@ ARRK =  1.000E-02 ! a-coefficient for RRK-style formation-desorption
 !*****************************
 
 OUTPUT_PER_DECADE =    2 ! outputs per decade  2  8  64  128 (Only without diffusion)
-TSTART =  1.000E+00 ! first output time, after zero (yrs)
-TFINAL =  1.000E+01 ! last output time (yrs)
+START_TIME =  1.000E+00 ! first output time, after zero (yrs)
+STOP_TIME =  1.000E+01 ! last output time (yrs)
 WSTEP =     1 ! Outputs every WSTEP timesteps (/=1 only for 1D outputs)
 WSTEPR =    10 ! Outputs every WSTEPR timesteps for the rate coefficients
 IRATEOUT =     1 ! Spatial point for the rate output
