--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -60,9 +60,9 @@ ARRK =  1.000E-02 ! a-coefficient for RRK-style formation-desorption
 !*        Output times       *
 !*****************************
 
-output_per_decade =    2 ! outputs per decade  2  8  64  128 (Only without diffusion)
-start_time =  1.000E+00 ! first output time, after zero (yrs)
-stop_time =  1.000E+01 ! last output time (yrs)
+OUTPUT_PER_DECADE =    2 ! outputs per decade  2  8  64  128 (Only without diffusion)
+START_TIME =  1.000E+00 ! first output time, after zero (yrs)
+STOP_TIME =  1.000E+01 ! last output time (yrs)
 WSTEP =     1 ! Outputs every WSTEP timesteps (/=1 only for 1D outputs)
 WSTEPR =    10 ! Outputs every WSTEPR timesteps for the rate coefficients
 IRATEOUT =     1 ! Spatial point for the rate output
