--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -81,7 +81,7 @@ is_diffusivity =     0 ! Diffusivity flag (1. constant 2. alpha)
 turbulent_diffusivity =  1.000E-02 ! Turbulent diffusivity (cgs if 1) (value or parameter)
 box_size =  4.500E+14 ! Computing box"s size (cm)
 central_mass =  1.054E+33 ! Central mass (g)
-DISTR =  1.500E+15 ! Radial distance (cm) for the disk model 1.500D+15 cm = 100 AU
+radial_distance =  1.500E+15 ! Radial distance (cm) for the disk model
 TESTJAC =     0 ! Testing the number of non-zero jacobian elements ?
 NJAC =   314 ! Number of non-zero jacobian elements (per line, result of TESTJAC=1)
  
