--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -28,8 +28,8 @@ conservation_type =  0 ! 0=only e- conserved; 1=elem #1 conserved, 2=elem #1 & #
 !*    Gas phase parameters   *
 !*****************************
 
-initial_gas_density =  2.000E+04 ! initial gas density
-initial_gas_temperature =  1.000E+01 ! initial gas temp
+initial_gas_density =  2.000E+04 ! initial gas density (part/cm-3)
+initial_gas_temperature =  1.000E+01 ! initial gas temperature (K)
 initial_visual_extinction =  1.500E+01 ! initial visual extinction
 cr_ionisation_rate =  1.300E-17 ! cosmic ray ionisation rate (1.3e-17 standard value)
 x_ionisation_rate =  0.000E+00 ! Ionisation rate due to X-rays (s-1)
@@ -60,7 +60,7 @@ ARRK =  1.000E-02 ! a-coefficient for RRK-style formation-desorption
 !*        Output times       *
 !*****************************
 
-output_per_decade =    2 ! outputs per decade  2  8  64  128 (Only without diffusion)
+output_per_decade =    2 ! outputs per decade (Only without diffusion)
 start_time =  1.000E+00 ! first output time, after zero (yrs)
 stop_time =  1.000E+01 ! last output time (yrs)
 WSTEP =     1 ! Outputs every WSTEP timesteps (/=1 only for 1D outputs)
