--- a/example_simulation/surface_parameters.in
+++ b/example_simulation/surface_parameters.in
@@ -1,12 +1,12 @@
 ! Spec        m/mH  ED(K) Eb(K) dEb(K)                           dHf(kcal/mol)
 JH            1   450.  225. 3.0E+01 Herma, Ebfac=50%         *  +51.63
-!X             1   350.  175. 3.0E+01 TA H2Oice, Ebfac=50%     *  +51.63
-!X             1   350.  287. 3.0E+01 TA H2Oice, Eb Katz       *  +51.63
-!X             1   373.  287. 3.0E+01 Katz et al. 1999         *  +51.63
+!JH             1   350.  175. 3.0E+01 TA H2Oice, Ebfac=50%     *  +51.63
+!JH             1   350.  287. 3.0E+01 TA H2Oice, Eb Katz       *  +51.63
+!JH             1   373.  287. 3.0E+01 Katz et al. 1999         *  +51.63
 JH2           2    23.  250. 0.0e+00 Herma, Ebfac=50%         *    0.00
-!X             2   315.  158. 0.0e+00 Katz, Ebfac=50%          *    0.00
-!X             2   500.  347. 0.0e+00                          *    0.00
-!X             2   315.  135. 0.0e+00 Katz et al. 1999         *    0.00
+!JH2             2   315.  158. 0.0e+00 Katz, Ebfac=50%          *    0.00
+!JH2             2   500.  347. 0.0e+00                          *    0.00
+!JH2             2   315.  135. 0.0e+00 Katz et al. 1999         *    0.00
 JHe           4   100.    0. 1.2e-01 T&H(p248), dEb=WT(Ar)    *    0.00
 JC           12   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   * +170.00
 JN           14   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   * +112.50
