--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -83,5 +83,5 @@ box_size =  4.500E+14 ! Computing box"s size (cm)
 central_mass =  1.054E+33 ! Central mass (g)
 radial_distance =  1.500E+15 ! Radial distance (cm) for the disk model
 TESTJAC =     0 ! Testing the number of non-zero jacobian elements ?
-NJAC =   314 ! Number of non-zero jacobian elements (per line, result of TESTJAC=1)
+nb_nonzeros_values =   314 ! Number of non-zero jacobian elements (per line, result of TESTJAC=1)
  
