--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -28,41 +28,41 @@ conservation_type =  0 ! 0=only e- conserved; 1=elem #1 conserved, 2=elem #1 & #
 !*    Gas phase parameters   *
 !*****************************
 
-initial_gas_density =  2.000E+04 ! initial gas density (part/cm-3)
-initial_gas_temperature =  1.000E+01 ! initial gas temperature (K)
+initial_gas_density =  2.000E+04 ! initial gas density [part/cm-3]
+initial_gas_temperature =  1.000E+01 ! initial gas temperature [K]
 initial_visual_extinction =  1.500E+01 ! initial visual extinction
-cr_ionisation_rate =  1.300E-17 ! cosmic ray ionisation rate (1.3e-17 standard value)
-x_ionisation_rate =  0.000E+00 ! Ionisation rate due to X-rays (s-1)
+cr_ionisation_rate =  1.300E-17 ! cosmic ray ionisation rate [s-1] (standard=1.3e-17)
+x_ionisation_rate =  0.000E+00 ! Ionisation rate due to X-rays [s-1]
 uv_flux =  1.000E+00 ! Scale factor for the UV flux, in unit of the reference flux (1.=nominal)
 
 !*****************************
 !*      Grain parameters     *
 !*****************************
 
-initial_dust_temperature =  1.000E+01 ! initial dust temp
+initial_dust_temperature =  1.000E+01 ! initial dust temperature [K]
 initial_dtg_mass_ratio =  1.000E-02 ! dust-to-gas ratio by mass
 sticking_coeff_neutral =  1.000E+00 ! sticking coeff for neutral species
 sticking_coeff_positive =  0.000E+00 ! sticking coeff for positive species
 sticking_coeff_negative =  0.000E+00 ! sticking coeff for negative species
 grain_density =  3.000E+00 ! mass density of grain material
-grain_radius =  1.000E-05 ! grain radius (cm)
-site_spacing =  1.000E-08 ! site spacing (cm)
-site_density =  1.500E+15 ! site density (cm-2)
+grain_radius =  1.000E-05 ! grain radius [cm]
+site_spacing =  1.000E-08 ! site spacing [cm]
+site_density =  1.500E+15 ! site density [cm-2]
 EBFAC =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
 ACT =  1.000E-08 ! grain rxn activation energy constant
-TSMAX =  7.000E+01 ! peak grain temp (CR heating)
-CRT =  1.000E-05 ! duration (s) of peak grain T
-CRFE =  3.000E-14 ! Fe-ion--grain encounter s-1 grain-1 (for 0.1 micron grain)
+TSMAX =  7.000E+01 ! peak grain temperature [K] (CR heating)
+CRT =  1.000E-05 ! duration [s] of peak grain temperature
+CRFE =  3.000E-14 ! Fe-ion--grain encounter [s-1 grain-1] (for 0.1 micron grain)
 LAYERS =  1.000E+02 ! number of monolayers for ITYPE 17-20 currently not used in the code
 ARRK =  1.000E-02 ! a-coefficient for RRK-style formation-desorption
 
 !*****************************
-!*        Output times       *
+!*  Integration and Outputs  *
 !*****************************
 
+start_time =  1.000E+00 ! first output time, after zero [yrs]
+stop_time =  1.000E+01 ! last output time [yrs]
 output_per_decade =    2 ! outputs per decade (Only without diffusion)
-start_time =  1.000E+00 ! first output time, after zero (yrs)
-stop_time =  1.000E+01 ! last output time (yrs)
 WSTEP =     1 ! Outputs every WSTEP timesteps (/=1 only for 1D outputs)
 WSTEPR =    10 ! Outputs every WSTEPR timesteps for the rate coefficients
 
