--- a/doxygen.conf
+++ b/doxygen.conf
@@ -25,7 +25,7 @@ DOXYFILE_ENCODING      = UTF-8
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded
 # by quotes) that should identify the project.
 
-PROJECT_NAME           = Nautilus
+PROJECT_NAME           = "<a href="http://code.google.com/p/nautilus/">Nautilus</a>"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number.
 # This could be handy for archiving the generated documentation or
