--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -12,6 +12,8 @@
 !*          Switches         *
 !*****************************
 
+is_structure_evolution =  0 ! If 1, physical structure properties evolve with time, values come from structure_evolution.dat file that must exists
+grain_temperature_type = fixed                                                                            ! fixed, gas or table fixed: Tgrain = Tgrain_initial ; gas: Tgrain=Tgas ; table: Tgrain is interpolated from structure_evolution.dat data file (5th optional column)
 is_grain_reactions =  1 ! Accretion, grain surface reactions
 is_absorption =  1 ! H2 AND CO SELF-SHIELDING
 grain_tunneling_diffusion =  0 ! 0=thermal; For H,H2: 1=QM1; 2=QM2; 3=choose fastest
