--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -45,7 +45,7 @@ grain_radius =  1.000E-05 ! grain radius [cm]
 site_spacing =  1.000E-08 ! site spacing [cm]
 site_density =  1.500E+15 ! site density [cm-2]
 diff_desorp_default_ratio =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
-ACT =  1.000E-08 ! grain rxn activation energy constant
+activation_barrier_width =  1.000E-08 ! grain reaction activation energy barrier width. [cm]
 peak_grain_temperature =  7.000E+01 ! peak grain temperature [K] (CR heating)
 peak_duration =  1.000E-05 ! duration [s] of peak grain temperature
 CRFE =  3.000E-14 ! Fe-ion--grain encounter [s-1 grain-1] (for 0.1 micron grain)
