--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -13,7 +13,7 @@
 !*****************************
 
 is_structure_evolution =  0 ! If 1, physical structure properties evolve with time, values come from structure_evolution.dat file that must exists
-grain_temperature_type = computed                                                                         ! fixed, gas, table or computedfixed: Tgrain = Tgrain_initial ; gas: Tgrain=Tgas ; table: Tgrain is interpolated from structure_evolution.dat data file (5th optional column) ; computed: calculated from uv_flux and visual extinction by radiative equilibrium
+grain_temperature_type = computed                                                                         ! fixed, gas, table or computed\n! fixed: Tgrain = Tgrain_initial. ! gas: Tgrain=Tgas ; \n! table: Tgrain is interpolated from structure_evolution.dat data file (5th optional column) ; \n! computed: calculated from uv_flux and visual extinction by radiative equilibrium
 is_grain_reactions =  1 ! Accretion, grain surface reactions
 is_absorption =  1 ! H2 AND CO SELF-SHIELDING
 grain_tunneling_diffusion =  0 ! 0=thermal; For H,H2: 1=QM1; 2=QM2; 3=choose fastest
@@ -58,10 +58,9 @@ vib_to_dissip_freq_ratio =  1.000E-02 ! [no unit] The ratio of the surface-molec
 !*  Integration and Outputs  *
 !*****************************
 
-start_time =  1.000E+00 ! first output time, after zero [yrs]
-stop_time =  1.000E+01 ! last output time [yrs]
-output_per_decade =    2 ! outputs per decade (Only without diffusion)
-WSTEP =     1 ! Outputs every WSTEP timesteps (/=1 only for 1D outputs)
-WSTEPR =    10 ! Outputs every WSTEPR timesteps for the rate coefficients
+start_time =  1.000E+00 ! [yrs] first output time
+stop_time =  1.000E+01 ! [yrs] last output time
+nb_outputs =    3 ! Total number of outputs (used for linear or log spaced outputs)
+output_type = log                                                                              ! linear, log, table\n! linear: Output times are linearly spaced\n ! log   : Outputs times are log-spaced ! table : Outputs times are read from time_evolution.dat
 relative_tolerance =  1.000E-04 ! Relative tolerance of the solver
 minimum_initial_abundance =  1.000E-40 ! default minimum initial fraction abundance
