SITE_DENSITY for SURFACE_SITE_DENSITY

--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -47,7 +47,7 @@ sticking_coeff_negative =  0.000E+00 ! sticking coeff for negative species
 grain_density =  3.000E+00 ! mass density of grain material
 grain_radius =  1.000E-05 ! grain radius [cm]
 diffusion_barrier_thickness =  1.000E-08 ! Barrier thickness [cm]
-site_density =  1.500E+15 ! site density [cm-2]
+surface_site_density =  1.500E+15 ! site density [cm-2]
 diff_desorp_default_ratio =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
 activation_barrier_width =  1.000E-08 ! grain reaction activation energy barrier width. [cm]
 peak_grain_temperature =  7.000E+01 ! peak grain temperature [K] (CR heating)
