--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -50,7 +50,7 @@ diffusion_barrier_thickness =  1.000E-08 ! Barrier thickness [cm]
 surface_site_density =  1.500E+15 ! site density [cm-2]
 diff_desorp_default_ratio =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
 chemical_barrier_thickness =  1.000E-08 ! grain reaction activation energy barrier width. [cm]
-peak_grain_temperature =  7.000E+01 ! peak grain temperature [K] (CR heating)
+cr_peak_grain_temp =  7.000E+01 ! peak grain temperature [K] (CR heating)
 peak_duration =  1.000E-05 ! duration [s] of peak grain temperature
 Fe_ionisation_rate =  3.000E-14 ! (cosmic) Fe-ion--grain encounter [s-1 grain-1] 
 (for 0.1 micron grain) For cosmic photo desorptions, only Fe-ions are efficient to heat grains. 
