Renaming DIFF_DESORP_DEFAULT_RATIO for DIFF_BINDING_RATIO

--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -48,7 +48,7 @@ grain_density =  3.000E+00 ! mass density of grain material
 grain_radius =  1.000E-05 ! grain radius [cm]
 diffusion_barrier_thickness =  1.000E-08 ! Barrier thickness [cm]
 surface_site_density =  1.500E+15 ! site density [cm-2]
-diff_desorp_default_ratio =  5.000E-01 ! ratio Eb(I):Ed(I) (excludes H,H2); -ve means use given values
+diff_binding_ratio =  5.000E-01 ! Ratio used to compute the DIFFUSION_BARRIER from the BINDING_ENERGY if not known
 chemical_barrier_thickness =  1.000E-08 ! grain reaction activation energy barrier width. [cm]
 cr_peak_grain_temp =  7.000E+01 ! peak grain temperature [K] (CR heating)
 cr_peak_duration =  1.000E-05 ! duration [s] of peak grain temperature
