Updating the documentation. Adding references. Correcting minor bugs. Adding references to the index.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ archive/
 unitary_tests
 tests/
 old_simulation/
+DOC/nautilus.bib.bak
+DOC/nautilus_documentation.aux
+DOC/nautilus_documentation.bbl
+DOC/nautilus_documentation.blg
+DOC/nautilus_documentation.idx
+DOC/nautilus_documentation.ilg
+DOC/nautilus_documentation.ind
+DOC/nautilus_documentation.synctex.gz
+DOC/nautilus_documentation.tex.bak
+DOC/nautilus_documentation.toc
